# iress-robot

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: set_build_options.cmake
src/: main.cpp  robot.cpp  robot.h
test/: test.cpp
